automazione/terna-static-dr/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terna-static-dr
  labels:
    app.kubernetes.io/part-of: terna-static-dr
