automazione/terna-static-dr/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terna-static-web
  namespace: terna-static-dr
spec:
  selector:
    app: terna-static-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
